# Qt-QML-SwipeView

./: CMakeLists.txt  Main.qml  Page_1.qml  Page_2.qml  Page_3.qml  main.cpp
